# qt_ui_kinect

./: CMakeLists.txt  MyProjectBpp.pro  camerainterface.cpp  camerainterface.h  kinectinterface.cpp  kinectinterface.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mykinect.cpp  mykinect.h  webcam.cpp  webcam.h
